# clap_study

./: Cargo.toml  README.md
examples/: greet.rs  head.rs
tests/inputs/: diamonds.transpose.txt
